--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,10 +5,39 @@ body {
 	font-family: Verdana, Geneva, sans-serif;
 	margin: 0;
 }
+.text { 
+	margin-bottom:12px; 
+	width:95%; 
+	padding: .4em; 
+}
+fieldset { 
+	padding:0; 
+	border:0; 
+	margin-top:25px; 
+}
+.menuBtn {
+	width: 100px;
+}
 .siteContainer {
 	width: 900px;
 	margin: 0px auto;
 	padding: 0px;
+}
+.widgets {
+	display:none;
+	position:absolute;
+}
+#toolbar {
+	padding: 2px 2px;
+	font-size:12px;
+}
+#map-menu {
+	position:absolute;
+	display:block;
+	background-color:#CCC;
+	width: 200px;
+	left: 50px;
+	top: 200px;	
 }
 .footer {
 
