--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,19 +1,18 @@
 @charset "UTF-8";
-/* CSS Document */
 body {
 	font-family: Verdana, Geneva, sans-serif;
 	margin: 0;
 	padding: 0;
+	overflow: hidden;
 }
 .text { 
-	margin-bottom:12px; 
+	margin-bottom:10px; 
 	width:95%; 
 	padding: .4em; 
 }
 fieldset { 
 	padding:0; 
 	border:0; 
-	margin-top:10px; 
 }
 .siteContainer {
 	width: 100%;
@@ -46,8 +45,8 @@ fieldset {
 	-webkit-box-shadow: 3px 3px 5px #888;
 }
 .toolbar {
-	box-shadow: 0px 1px 7px #888;
-	-webkit-box-shadow: 0px 1px 7px #888;
+	box-shadow: 0px 2px 5px #888;
+	-webkit-box-shadow: 0px 2px 5px #888;
 	width: 100%;
 	height: 40px;
 	background-color: #DDD;
@@ -55,14 +54,73 @@ fieldset {
 }
 .toolbarBtn {
 	display: inline-block;
-	height: 30px;
-	vertical-align: middle;
+	float: left;
+	font-size: 0.9em;
+	margin: 5px 2px;
+}
+.utilBtn {
+	float: right;
 }
 .minimize {
 	height: 0px!important;
 }
+.block {
+	height:12px;
+	width: 12px;
+	margin: auto 3px;
+	display: inline-block;
+	border-radius: 2px;
+}
+.redB {
+	background-color: #F66;
+}
+.blueB {
+	background-color: #69F;
+}
+.greenB {
+	background-color: #0F0;
+}
+.validateTips { 
+	border: 1px solid transparent; 
+	margin: 5px auto;
+}
+.infoTitle {
+	margin: 2px 0px;
+}
+.infoContent {
+	border:dashed;
+	border-width:1px;
+	border-radius: 4px;
+	margin: 2px 0px;
+	padding: 4px;
+}
+.infoDate {
+	margin: 2px 0px;
+	font-size: 0.7em;
+}
+.infoBtn {
+	float: right;
+}
+#logo {
+	float: right;
+	margin: 5px 10px;
+}
+#filters{
+	position: absolute;
+	width: 360px;
+	left: 50%;
+	margin-left: -180px;
+}
+#space {
+	width: 200px;
+	height: 0px;
+}
+#prompt {
+	width: 250px;
+	overflow: hidden;
+}
 div#timelinecontainer {
-	height: 80px;
+	height: 240px;
 	z-index: -5;
 }
 div#timeline{
@@ -73,17 +131,11 @@ div#timeline{
 }
 #rightMenu {
 	padding: 2px 2px;
-	font-size:14px;
-	overflow: hidden;
 	width: 120px;
 	z-index: 1000;
 }
 .menuBtn {
 	width: 100%;
-}
-div.typeBtns {
-	margin: 3px auto;
-	width: 400px;
 }
 span#username {
 	text-decoration:underline;
